Fixed about section when the text is too short

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -49,7 +49,7 @@ canvas {
 #about {
     margin-top: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 #about p {
